fix aligning issues again.

--- a/contact.css
+++ b/contact.css
@@ -9,7 +9,7 @@ html {
         color: yellow;
            }
 
-      header {
+      head {
          background-color: yellow;
          text-align: center;
      }
